# hpi-pt2

./: CMakeLists.txt
a1/: change.cpp  fibonacci_iterative.cpp  fibonacci_recursive.cpp  triangular.cpp  walking_stairs.cpp
a1/submission/: change  fibonacci_iterative  fibonacci_recursive  triangular  walking_stairs
a2/: dirinfo  dirinfo.cpp  fileio  fileio.cpp  game_of_life  game_of_life.cpp  results.txt
a3/: CMakeLists.txt  emailcheck.cpp  exceptions.cpp  sniffer_dog.cpp
a4/: functionwrapping.cpp  genetic-tsp.cpp  mapreduce.cpp  output.csv
a5/: burger.cpp  iterators.cpp  search.cpp  sort.cpp
a7/: account.cpp  amount.cpp  producerconsumer.cpp  vector.cpp
